# solana-ua-bootcamp-2024-08-06

./: .gitignore
approve/: Anchor.toml
approve/programs/approve/: Cargo.toml
approve/programs/approve/src/: lib.rs
approve/programs/approve/src/instructions/: make_offer.rs  mod.rs  take_offer.rs
approve/tests/: approve.test.ts
escrow/: Anchor.toml
escrow/programs/escrow/: Cargo.toml
escrow/programs/escrow/src/: lib.rs
escrow/programs/escrow/src/instructions/: make_offer.rs  mod.rs  take_offer.rs
escrow/tests/: escrow.test.ts
favorites/: Anchor.toml
favorites/programs/favorites/src/: lib.rs
favorites/tests/: favorites.test.ts
practice-1/solana_rust/: .env  Cargo.toml
practice-1/solana_rust/src/: lib.rs  main.rs
practice-4/: README.md
practice-4/favorites/: Anchor.toml  package.json
practice-4/favorites/programs/favorites/src/: lib.rs
practice-4/favorites/tests/: favorites.ts  system-program-errors.ts
solana-TS/: .env  check-balance.ts  create-token-account.ts  create-token-metadata.ts  create-token-mint.ts  create_multisig.ts  create_nonce_account.ts  generate-keypair.ts  load-keypair.ts  mint-tokens.ts  multisig_with_nonce.ts  package-lock.json  package.json  require_airdrop.ts  send-sol.ts  transfer_token_receiver_pays.ts  transfer_with_nonce.ts
solana-TS/favorites/programs/favorites/src/: lib.rs
solana-TS/favorites/src/: lib.rs
solana_rust/: .env
solana_rust/src/: lib.rs  main.rs
