[package]
name = "solana_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#solana-client = "2"
#solana-sdk = "2"
#solana-program = "2"
#spl-token = "6.0.0"
#spl-associated-token-account = "4.0.0"
solana-client = "1.18"
solana-sdk = "1.18"
solana-program = "1.18"
spl-token = "4.0.0"
spl-associated-token-account = "3.0.2"
mpl-token-metadata = "4"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.125"